tests/baselines/reference/enumShadowedInfinityNaN.errors.txt
enumShadowedInfinityNaN.ts(6,9): error TS18033: Type '{}' is not assignable to type 'number' as required for computed enum member values.
enumShadowedInfinityNaN.ts(13,9): error TS18033: Type '{}' is not assignable to type 'number' as required for computed enum member values.


==== enumShadowedInfinityNaN.ts (2 errors) ====
    // https://github.com/microsoft/TypeScript/issues/54981
    
    {
      let Infinity = {};
      enum En {
        X = Infinity
            ~~~~~~~~
!!! error TS18033: Type '{}' is not assignable to type 'number' as required for computed enum member values.
      }
    }
    
    {
      let NaN = {};
      enum En {
        X = NaN
            ~~~
!!! error TS18033: Type '{}' is not assignable to type 'number' as required for computed enum member values.
      }
    }
    